[package]
name = "merkle-dag"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
license = "Apache License 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.proptest]
version = "1.0.0"
optional = true

[features]
default = []