[package]
name = "merkle-dag"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
license = "Apache License 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ciborium]
version = "0.2.0"
optional = true

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dependencies.proptest]
version = "1.0.0"
optional = true

[dependencies.rusty-leveldb]
version = "= 1.0.4"
optional = true

[dependencies.blake2]
version = "0.10.4"
optional = true

[dependencies.rocksdb]
version = "0.19.0"
optional = true

[dependencies.rusqlite]
version = "0.28.0"
optional = true

[features]
default = ["cbor"]
cbor = ["dep:ciborium"]
blake2 = ["dep:blake2"]
sqlite = ["dep:rusqlite", "cbor", "blake2"]
rusty-leveldb = ["dep:rusty-leveldb", "blake2", "cbor"]
rocksdb = ["dep:rocksdb", "blake2", "cbor"]
